--- a/domain.yml
+++ b/domain.yml
@@ -6,6 +6,10 @@ intents:
   - mood_great
   - mood_unhappy
   - bot_challenge
+  - find_time_zone
+  - find_time_zone_for_location
+  - city_info
+  - thanks
 
 responses:
   utter_greet:
@@ -26,6 +30,10 @@ responses:
 
   utter_iamabot:
   - text: "I am a bot, powered by Rasa."
+
+  utter_ask_ location:
+  - text:  
+
 
 session_config:
   session_expiration_time: 60
