--- a/domain.yml
+++ b/domain.yml
@@ -7,6 +7,9 @@ intents:
   - city_info
   - thanks
 
+actions:
+  - action_show_time_zone 
+   
 entities:
   - city
 
@@ -17,10 +20,7 @@ slots:
 
 responses:
   utter_greet:
-  - text: "Hey! How are you?"
-
-  utter_happy:
-  - text: "Great, carry on!"
+  - text: "Hey! I am a Time Zone bot"
 
   utter_goodbye:
   - text: "Bye"
@@ -32,7 +32,7 @@ responses:
   - text: "Which city do you need the time zone of?"  
 
   utter_finding_time_zone:
-   - text: "Ok, give me a second to look up the time zone of {city} " 
+   - text: "Ok, give me a second to look up the time zone of {city}" 
 
   utter_you_are_welcome:
    - text: "You are welcome!"  
